--- a/app/views/renewal/components/ApplicationSubmitView.scala.html
+++ b/app/views/renewal/components/ApplicationSubmitView.scala.html
@@ -39,16 +39,12 @@
             case(true, true) => messages("renewal.progress.ready.to.submit.intro")
             case(false, _) => messages("renewal.progress.submit.intro")
         }}
-      <ul class="govuk-list govuk-list--bullet">
-        <li> @{(renewalSectionCompleted, canSubmit) match {
-            case (true, true) => messages("renewal.progress.ready.to.submit.intro.bl1")
-            case _ => null
-            }}</li>
-        <li> @{(renewalSectionCompleted, canSubmit) match {
-            case (true, true) => messages("renewal.progress.ready.to.submit.intro.bl2")
-            case _ => null
-            }}</li>
-      </ul>
+    <ul class="govuk-list govuk-list--bullet">
+        @if(renewalSectionCompleted && canSubmit) {
+        <li>@messages("renewal.progress.ready.to.submit.intro.bl1")</li>
+        <li>@messages("renewal.progress.ready.to.submit.intro.bl2")</li>
+        }
+    </ul>
     </p>
 
     @if(renewalSectionCompleted){
