DDCYLS-6368: Deregistration Confirmation Reason handled dynamically.

--- a/app/views/deregister/DeregistrationConfirmationView.scala.html
+++ b/app/views/deregister/DeregistrationConfirmationView.scala.html
@@ -18,6 +18,7 @@
 @import views.html.components.PrintLink
 @import views.html.components.FeedbackSurveyLink
 @import config.ApplicationConfig
+@import models.deregister.DeregistrationReason
 
 @this(
         layout: Layout,
@@ -31,7 +32,7 @@
         anchor: Anchor
 )
 
-@(businessName: String, amlsRefNumber: String)(implicit messages: Messages, applicationConfig: ApplicationConfig, request: Request[_])
+@(dynamicKey : String, businessName: String, amlsRefNumber: String)(implicit messages: Messages, applicationConfig: ApplicationConfig, request: Request[_])
 
 @panelContent = {
     <p>@businessName</p>
@@ -50,9 +51,8 @@
             content = HtmlContent(panelContent)
         )
     )
-
     <p class="govuk-body">@messages("deregistration.confirmation.p1")</p>
-    <p class="govuk-body">@messages("deregistration.confirmation.p2")</p>
+    <p class="govuk-body">Your given reason for doing so is: @messages(s"deregistration.reason.lbl.${dynamicKey}")</p>
     <p class="govuk-body">@messages("deregistration.confirmation.p3._1")@anchor("deregistration.confirmation.p3._2", controllers.routes.LandingController.get().url, "landing-page")@messages("deregistration.confirmation.p3._3")</p>
 
 
