DDCYLS-5609: Update Service CYA Content Update

--- a/app/views/businessmatching/updateservice/add/UpdateServicesSummaryView.scala.html
+++ b/app/views/businessmatching/updateservice/add/UpdateServicesSummaryView.scala.html
@@ -35,7 +35,7 @@
 
 @activityRow(activity: BusinessActivity) = @{
     SummaryListRow(
-        Key(Text(messages("businessmatching.updateservice.selectactivities.title"))),
+        Key(Text(messages("businessmatching.updateservice.selectactivities.cya"))),
         Value(Text(activity.getMessage())),
         actions = Some(Actions(
             items = Seq(ActionItem(
