Add Your responsibilities page to business details journey

--- a/app/views/businessdetails/WhatYouNeedView.scala.html
+++ b/app/views/businessdetails/WhatYouNeedView.scala.html
@@ -28,7 +28,7 @@
     pageTitleKey = s"${messages("title.wyn")} - ${messages("summary.businessdetails")}",
     subtitleKey = "summary.businessdetails",
     headingKey = "title.wyn",
-    controllers.businessdetails.routes.PreviouslyRegisteredController.get().url
+    controllers.businessdetails.routes.YourResponsibilitiesController.get.url
 ) {
     <p class="govuk-body">@messages("businessdetails.whatyouneed.subheading")</p>
 
