Add Your responsibilities page to renewal journey

--- a/app/views/renewal/WhatYouNeedView.scala.html
+++ b/app/views/renewal/WhatYouNeedView.scala.html
@@ -32,7 +32,8 @@
     pageTitleKey = s"${messages("title.wyn")} - ${messages("summary.renewal")}",
     subtitleKey = "summary.renewal",
     headingKey = "title.wyn",
-    controllers.renewal.routes.InvolvedInOtherController.get().url
+    controllers.renewal.routes.YourResponsibilitiesController.get.url
+
 ) {
 
     <p class="govuk-body">@messages("renewal.whatyouneed.requiredinfo.heading")</p>
