DDCYLS-7025: Amended CSS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 $govuk-assets-path: "/agent/assets/lib/govuk-frontend/dist/govuk/assets/";
 @import "lib/govuk-frontend/dist/govuk/base";
 
+$govuk-new-organisation-colours: true
+
 .registration-status-tag {
   float: right;
 }
