DDCYLS-7025: Added semi colon

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 $govuk-assets-path: "/agent/assets/lib/govuk-frontend/dist/govuk/assets/";
 @import "lib/govuk-frontend/dist/govuk/base";
 
-$govuk-new-organisation-colours: true
+$govuk-new-organisation-colours: true;
 
 .registration-status-tag {
   float: right;
